--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     </header>
 
     <nav class="main-nav">
-        <button class="toggle-menu"><i class="fa-solid fa-bars"></i></button>
+        <button class="toggle-menu" id="menu" aria-label="menu"><i class="fa-solid fa-bars "></i></button>
 
         <menu class="nav-menu">
             <li>
